# SynthFHIR

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cli.py  clock.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  synthfhir.py  test_ui.html
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
api/: routes.py
data/: conditions.py  geography.py  immunizations.py  medications.py  observations.py  procedures.py
docs/: README.md  architecture.md  catalogs.md  cli.md  configuration.md  deployment.md  faq.md  getting-started.md  python-library.md  reproducibility.md  resources.md  rest-api.md  roadmap.md  validation.md  web-console.md
generators/: _rng.py  account_gen.py  allergy_gen.py  appointment_gen.py  body_structure_gen.py  care_plan_gen.py  care_team_gen.py  claim_gen.py  clinical_impression_gen.py  cohort_gen.py  communication_gen.py  composition_gen.py  condition_gen.py  consent_gen.py  coverage_gen.py  device_gen.py  diagnostic_report_gen.py  document_reference_gen.py  encounter_gen.py  episode_of_care_gen.py  explanation_of_benefit_gen.py  family_member_history_gen.py  flag_gen.py  goal_gen.py  group_gen.py  imaging_study_gen.py  immunization_gen.py  list_gen.py  location_gen.py  medication_administration_gen.py  medication_dispense_gen.py  medication_gen.py  medication_resource_gen.py  medication_statement_gen.py  nutrition_order_gen.py  observation_gen.py  organization_gen.py  patient_gen.py  practitioner_gen.py  practitioner_role_gen.py  (+9 more)
mappers/: _helpers.py  pipeline.py
mappers/r4/: account.py  allergy.py  appointment.py  body_structure.py  bundle.py  care_plan.py  care_team.py  claim.py  clinical_impression.py  communication.py  composition.py  condition.py  consent.py  coverage.py  device.py  diagnostic_report.py  document_reference.py  encounter.py  episode_of_care.py  explanation_of_benefit.py  family_member_history.py  flag.py  goal.py  group.py  imaging_study.py  immunization.py  list.py  location.py  medication.py  medication_administration.py  medication_dispense.py  medication_resource.py  medication_statement.py  nutrition_order.py  observation.py  organization.py  patient.py  practitioner.py  practitioner_role.py  procedure.py  (+9 more)
mappers/r5/: account.py  allergy.py  appointment.py  body_structure.py  bundle.py  (+44 more)
memory/: MEMORY.md  feedback_no_em_dash.md
tests/: test_api.py  test_config.py  test_conformance.py  test_generators.py  test_mappers.py  test_new_resources.py  test_public_api.py  test_realism.py  test_referential_integrity.py  test_resource_coverage.py  test_validation.py
validation/: __init__.py  validator.py
web/: app.js  index.html  styles.css
